Day-6/security.tf
resource "aws_security_group" "alb-sg" {
    description = "allow http and https"
    vpc_id = aws_vpc.main.id

    tags = {
      Name ="alb-sg"
    }


    ingress {
        from_port = 80
        to_port = 80
        protocol = "tcp"
        cidr_blocks = ["0.0.0.0/0"]
    }

    ingress {
        from_port = 443
        to_port = 443
        protocol = "tcp"
        cidr_blocks = ["0.0.0.0/0"]
    }


    egress {
        from_port = 0
        to_port = 0
        protocol = "-1"
        cidr_blocks = ["0.0.0.0/0"]
       
    }
}
